# LadySion

./: .cursorrules  .gitignore  FRONTEND_ARCHITECTURE.md  INDEX_FILES_GUIDE.md  LANGGRAPH_GUIDE.md  Lady Sion 构建指南.md  MODERN_ESLINT_SETUP.md  OPENROUTER_GUIDE.md  README.md  deno.json  eslint.config.js  import_map.json  package-lock.json  package.json  test-connectivity.sh  tsconfig.json  whisper.config.json
AnimaWeave/: Cargo.toml  Spring_Event_Refactoring_Analysis.md  add.anima  add_twice.weave  anima-weave-design.md  anima-weave-mathematica-definition.md  anima-weave.ebnf  anima-weave.pest  basic.anima  build.gradle  complex_calc.weave  dsl-syntax-reference.md  sample.weave  settings.gradle  test-specification.md
AnimaWeave/anima-plugin-api/: Cargo.toml
AnimaWeave/config/checkstyle/: checkstyle.xml
AnimaWeave/config/spotbugs/: exclude.xml
AnimaWeave/config/spotless/: eclipse-formatter.xml
AnimaWeave/docs/: AnimaWeave-Java-功能设计文档.md  AnimaWeave-事件驱动插件架构设计.md  anima-weave-design.md  anima-weave-mathematica-definition.md  animaweave-implementation-strategy.md  import-design.md  test-specification.md
AnimaWeave/gradle/: libs.versions.toml
AnimaWeave/sanctums/: basic.anima  basic_generated.anima
AnimaWeave/src/: anima-weave.pest  lib.rs  parser.rs  plugin_macros.rs  plugin_registry.rs  types.rs
AnimaWeave/src/main/antlr/SeeleFelix/AnimaWeave/parser/: AnimaWeaveDSL.g4
AnimaWeave/src/main/antlr4/SeeleFelix/AnimaWeave/parser/: AnimaWeaveDSL.g4
AnimaWeave/src/main/java/SeeleFelix/AnimaWeave/: AnimaWeaveApplication.java
AnimaWeave/src/main/java/SeeleFelix/AnimaWeave/framework/awakening/: AnimaWeave.java  Awakening.java  AwakeningResult.java
AnimaWeave/src/main/java/SeeleFelix/AnimaWeave/framework/dsl/: DSLGraphBuilder.java
AnimaWeave/src/main/java/SeeleFelix/AnimaWeave/framework/event/: AnimaWeaveEvent.java  EventDispatcher.java
AnimaWeave/src/main/java/SeeleFelix/AnimaWeave/framework/graph/: Connection.java  ExecutionContext.java  GraphCoordinator.java  GraphDefinition.java  GraphExecutionResult.java  GraphLoader.java  GraphValidator.java  NodeDefinition.java
AnimaWeave/src/main/java/SeeleFelix/AnimaWeave/framework/node/: AnimaNode.java  InputPort.java  Node.java  NodeEventRouter.java  NodeExecutor.java  NodeFactory.java  NodeInstance.java  NodeInstanceFactory.java  NodeMeta.java  OutputPort.java  Port.java
AnimaWeave/src/main/java/SeeleFelix/AnimaWeave/framework/startup/: SystemReadyEvent.java  SystemStartupCoordinator.java  SystemStartupFailureEvent.java  (+1 more)
AnimaWeave/src/main/resources/: application.yml
AnimaWeave/src/plugins/basic/: plugin.rs
AnimaWeave/src/test/java/SeeleFelix/AnimaWeave/: AnimaWeaveApplicationTests.java
AnimaWeave/src/test/java/SeeleFelix/AnimaWeave/integration/: AwakeningIntegrationTest.java  TimestampPipelineTest.java
AnimaWeave/src/test/java/SeeleFelix/AnimaWeave/vessel/: BasicVesselTest.java
AnimaWeave/src/test/resources/: test_graph.weave
AnimaWeave/tests/: t0_basic_execution.rs  t1_1_basic_data_types.rs  type_system_foundation_test.rs  type_system_foundation_test_doc.md
AnimaWeave/tests/sanctums/: composite_type_test.weave  genesis.weave
AnimaWeave/tests/sanctums/basic/: genesis.weave
AnimaWeave/tests/sanctums/invalid/: no_import.weave  nonexistent_node.weave  unknown_node.weave
anima-weave-rust/: Cargo.toml  PROGRESS.md  README.md  REVIEW_CHECKLIST.md  REVIEW_SESSION_PROMPT.md
anima-weave-rust/cli/: Cargo.toml
anima-weave-rust/cli/src/: demo.rs  main.rs
anima-weave-rust/codegen/: Cargo.toml
anima-weave-rust/codegen/src/: lib.rs
anima-weave-rust/core/: Cargo.toml
anima-weave-rust/core/src/: error_handling.rs  event.rs  executor.rs  graph.rs  in_memory_graph.rs  label.rs  lib.rs  node.rs  signal.rs  state.rs  types.rs
anima-weave-rust/core/src/actor/: coordinator.rs  datastore.rs  errors.rs  execution_tracker.rs  mod.rs  node.rs  node_actor.rs  registry.rs  status_collector.rs  types.rs
anima-weave-rust/core/src/actor/coordinator/: coordinator.rs  mod.rs
anima-weave-rust/core/src/actor/databus/: actor.rs  mod.rs  store.rs
anima-weave-rust/core/src/actor/node_actor/: distributed_node_actor.rs  input_buffer.rs  message_router.rs  mod.rs  node_actor.rs  state_manager.rs  types.rs
anima-weave-rust/core/src/event/: control_event.rs  data_event.rs  data_ready_event.rs  errors.rs  messages.rs  mod.rs  node_events.rs  node_execute_event.rs  node_execution_event.rs  node_output_event.rs  node_ready_event.rs  types.rs
anima-weave-rust/dsl/: Cargo.toml
anima-weave-rust/dsl/src/: lib.rs
anima-weave-rust/engine/: Cargo.toml
anima-weave-rust/engine/src/: lib.rs
anima-weave-rust/engine/src/core/: graph.rs  label.rs  mod.rs  node.rs  signal.rs  types.rs
anima-weave-rust/engine/src/dsl/: graph.rs  parser.rs
anima-weave-rust/node/: Cargo.toml
anima-weave-rust/node/src/: factory.rs  lib.rs  macros.rs  node.rs  registry.rs
anima-weave-rust/primitives/: Cargo.toml
anima-weave-rust/primitives/src/: converter.rs  databus.rs  error.rs  label.rs  lib.rs  node.rs  port.rs  registry.rs  vessel.rs
anima-weave-rust/registry/: Cargo.toml
anima-weave-rust/registry/src/: lib.rs
anima-weave-rust/runtime/: Cargo.toml
anima-weave-rust/runtime/src/: actor.rs  actor_communication_test.rs  debug_test.rs  distributed_integration_test.rs  graph_runner.rs  integration_test.rs  launcher.rs  lib.rs  status_collector_test.rs  status_tracker.rs
anima-weave-rust/test/: Cargo.toml
anima-weave-rust/test/src/: lib.rs
anima-weave-rust/vessels/: Cargo.toml
anima-weave-rust/vessels/basic-vessel/: Cargo.toml
anima-weave-rust/vessels/basic-vessel/src/: lib.rs
anima-weave-rust/vessels/math-vessel/: Cargo.toml
anima-weave-rust/vessels/math-vessel/src/: lib.rs
anima-weave-rust/vessels/src/: add_node.rs  demo_inventory.rs  lib.rs  math_node.rs  nodes.rs  start_node.rs
anima-weave-rust/vessels/src/labels/: mod.rs  number_label.rs  prompt_label.rs  signal_label.rs  string_label.rs
anima-weave-rust/vessels/src/nodes/: add_node.rs  mod.rs  random_node.rs  result_node.rs  start_node.rs
docs/: README.md  (+2 more)
(+628 files in other folders)
