[package]
name = "anima-weave"
version = "0.1.0"
edition = "2021"
description = "AnimaWeave - A dual-flow computation system with mathematical formalization"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
libloading = "0.8"  # 动态库加载支持
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.20.0"
