[workspace]
members = [
    "primitives",
    "registry", 
    "runtime",
    "cli",
    "dsl",
    "codegen",
    "test",
    "vessels/basic-vessel",
    "vessels/math-vessel"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
inventory = "0.3"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 