[workspace]
members = [
    "core",           # 核心类型：DynamicLabel, AnimaEvent, Graph定义
    "runtime",        # Kameo Actor运行时：CoordinatorActor, NodeActor
    "dsl",            # DSL解析器：.anima文件解析和图构建
    "cli",            # 命令行工具：awakening和执行
    "vessels",
    "node"]
resolver = "2"

[workspace.dependencies]
# Actor系统
kameo = { version = "0.17.2", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志与追踪
log = "0.4"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# 其他工具
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.19.0"
env_logger = "0.11"

# 节点注册系统
inventory = "0.3"

# AnimaWeave v2 - Kameo Actor架构
# 
# 核心设计原则：
# 1. 每个Node = NodeActor (独立的Kameo Actor)
# 2. Coordinator = CoordinatorActor (全局状态和调度)
# 3. 严格遵循数学定义：NodeReady(n,Ω) ⟺ DataReady(n,Ω) ∧ ControlActive(n,Ω)
# 4. 纯Actor消息传递，无共享状态
# 5. DSL → Graph → Actor系统完整流水线 