[package]
name = "anima-weave-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anima-weave-core = { path = "../core" }
anima-weave-node = { path = "../node" }
anima-weave-vessels = { path = "../vessels" }
anima-weave-runtime = { path = "../runtime" }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
