[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
inventory = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log.workspace = true
kameo.workspace = true
anima-weave-core = { path = "../core" }
