[package]
name = "anima-weave-primitives"
version = "0.1.0"
edition = "2021"
description = "Core primitive abstractions for Anima Weave"
authors = ["SeeleFelix Team"]

# Core traits package should have zero dependencies to maintain clean abstractions
[dependencies]
paste = "1.0"
# No dependencies - pure trait definitions only 