[package]
name = "anima-weave-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anima-weave-core = { path = "../core" }
anima-weave-node = { path = "../node" }
anima-weave-vessels = { path = "../vessels" }
kameo = "0.17.2"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11.3"
