[package]
name = "anima-weave-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anima-weave-core = { path = "../core" }
anima-weave-node = { path = "../node" }
kameo = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true } 